# fex-metrica

./: .gitignore  LICENSE  LICENSE.md  README.md  UPDATES.md  fexinstall.m  fexinstall.m~
1.0.1/annotate/: README.md  fex_emographs.m  fexemographsg.fig  fexemographsg.m  fexnotes.fig  fexnotes.m  fexnotes.m~  fexwsearchg.fig  fexwsearchg.m  notes.m  notes.m~  test.avi  test.mov
1.0.1/examples/: Example_001.m  README.md  exe_01_prerocessing.m
1.0.1/examples/old/: exe_02_features_extraction.m
1.0.1/fexview/1.0.1/: fexwimg.m  fexwoverlay.m
1.0.1/fexview/1.0.1/util/: fexw_filtplot.m  fexw_pie.m  fexw_timeplot.m
1.0.1/postproc/: fex_bandpass.m  fex_interpolate.m  fex_reallign.m  fex_timeroi.m  fexc.m  fexc.m~  fexmove.m
1.0.1/preproc/cppdir/: CMakeLists.txt  fexfacet.cpp
1.0.1/preproc/matlab/: fex_lsg.m  fex_ppo2.m  fexppoc.m
1.0.1/python/: fex_videorecord.py
1.0.1/record/: fex_record.m
1.0.1/record/fexExp/src/: fex_test.py
1.0.1/src/preproc/: fex_bandpass.m  fex_falsepositive.m  fex_interpolate.m  fex_kernel.m  fex_mwavelet.m
1.0.1/src/preproc/fexfacetutil/: install.sh
1.0.1/src/util/: fex_combo2.m  fex_nfoldscv.m  fex_normalize.m  fex_zcoord.m
1.0.1/ui/: fexmetrica.fig  fexmetrica.m
1.0.1/ui/include/: fexaboutg.fig
1.0.1/util/: eviewerhdrs.xlsx  fex_balance.m  fex_getcolors.m  fex_getmatrix.m  fex_imputil.m  fex_strtime.m  fex_strtime.m~  fex_tsearch1.m  fex_whichframe.m  fex_whiteningt.m
doc/: Makefile  conf.py  index.rst  make.bat  modules.rst
doc/_build/doctrees/: environment.pickle  examples.doctree  index.doctree  modules.doctree
doc/_build/html/: .buildinfo  examples.html  genindex.html  index.html  mat-modindex.html  modules.html  objects.inv  search.html  searchindex.js
doc/_build/html/_sources/: modules.txt
fexSDK/: Contents.m
fexSDK/dev/old/annotate/: README.md  fex_emographs.m  fexemographsg.m
fexSDK/dev/oldsamples/: Example_001.m
fexSDK/include/: fex_init.m
fexSDK/samples/: Example_000.m  README.md  example1.m  fexemple1.m  fexemple1.m~  fexemple_proc.m  fexemple_server.m
fexSDK/samples/data/E002/: fexObj.mat
fexSDK/samples/data/test/: test.mov
fexSDK/samples/docs/: img2.tiff  img3.tiff
fexSDK/shared/: eviewerhdrs.xlsx  fexchannels.txt  fexdefaults.mat  fexheaders.mat  fexheaders2.mat  template_03.fxw  template_04.fxw
fexSDK/src/: fexc.m
fexSDK/src/emotient-matlab/: README.md  emotient_api.m
fexSDK/src/emotient-matlab/fex-util/: fex_find.m  fexwsearchg.fig  fexwsearchg.m
fexSDK/src/emotient-matlab/include/: ea-headers.mat  (+1 more)
fexSDK/src/facet/: README.md
fexSDK/src/facet/cpp/osx/: CMakeLists.txt  config.hpp  fexfacetexec.cpp
fexSDK/src/facet/cpp/osx/int/: config.hpp
fexSDK/src/facet/cppdir/osx/: CMakeLists.txt  config.hpp  video_2_json.cpp
fexSDK/src/facet/cppdir/osx/int/: CMakeLists.txt
fexSDK/src/proc/: fex_reallign.m  fexc.m  fexdesignc.m
fexSDK/src/ui/: fexchannelsg.fig  fexchannelsg.m  feximportdg.fig  feximportdg.m  fexstats1g.fig  fexstats1g.m
fexSDK/src/util/: Contents.m  fex_balance.m  fex_binotest.m  fex_box2linidx.m  fex_constructorui.fig  fex_constructorui.m  fex_defaults.m  fex_dsspace.m  fex_dummyvar.m  fex_facetproc.m  fex_fastproc.m  fex_find.m  fex_gauss2.m  fex_getcolors.m  fex_hist2.fig  fex_hist2.m  fex_imputil.m  fex_interpolate.m  fex_json2dat.py  fex_jsonparser.m  fex_kernel.m  fex_mlstring.m  fex_mwavelet.m  fex_normalize.m  fex_opticon.m  fex_robustimport.m  fex_softmax.m  fex_strtime.m  fex_timeroi.m  fex_tsearch1.m  fex_varargutil.m  fex_videocrop.m  fex_whiteningt.m  fex_zcoord.m  fexckf.m  fexdesignc.m  fexgenc.m  fexgrabc.m  feximportdg.fig  feximportdg.m  (+3 more)
fexSDK/src/viewer/: fexw_saveui.m  fexw_stackselectui.fig  fexw_stackselectui.m  fexw_streamerui.fig  fexw_streamerui.m  fexw_summaryplot.m  fexw_timeplot.m  fexwhdr.m  fexwimg.m  fexwoverlay.m  fexwsearchg.fig  fexwsearchg.m
fexSDK/ui/include/: fexaboutg.m
fexSDK/viewer/: fexwhdr.m  fexwimg.m  fexwoverlay.m
fexSDK/viewer/shared/: template_neutral.fxw
fexSDK/viewer/util/: fexw_filtplot.m
manual/: mfileslist.xlsx  ~$mfileslist.xlsx
paper/: fex_metrica_v02-27-15.aux  fex_metrica_v02-27-15.out  fex_metrica_v02-27-15.tex  img_source.graffle
(+75 files in other folders)
